include/ween32.h

/* ---- fundamental types (LLP64-faithful) ------------------------------- */

typedef int BOOL;
typedef unsigned char BYTE;
typedef uint16_t WORD;
typedef uint32_t DWORD;
typedef int32_t LONG;
typedef uint32_t UINT;
typedef intptr_t LONG_PTR;
typedef uintptr_t UINT_PTR;
typedef UINT_PTR WPARAM;
typedef LONG_PTR LPARAM;
typedef LONG_PTR LRESULT;
typedef intptr_t INT_PTR;
typedef char CHAR;
typedef const CHAR *LPCSTR;
typedef CHAR *LPSTR;
typedef void *LPVOID;
typedef DWORD COLORREF; /* 0x00BBGGRR, as on Windows */
/* Handles are opaque pointers, as on Windows. */
typedef struct ween_wnd *HWND;
typedef struct ween_dc *HDC;
typedef struct ween_gdiobj *HGDIOBJ;
typedef struct ween_gdiobj *HBRUSH;
typedef struct ween_gdiobj *HFONT;
typedef void *HINSTANCE;
typedef void *HICON;
struct ween_imagelist;
typedef struct ween_imagelist *HIMAGELIST;
typedef struct ween_gdiobj *HBITMAP;
/* A real menu, or a control id squeezed into the same parameter — win32 uses
 * one slot for both, and CreateWindowEx says which by whether the window is a
 * child. */
struct ween_menu;
typedef struct ween_menu *HMENU;
typedef struct tagPOINT {
    LONG x;
    LONG y;
} POINT;
typedef struct tagRECT {
    LONG left;
    LONG top;
    LONG right;
    LONG bottom;
} RECT;
typedef RECT *LPRECT;
typedef struct tagSIZE {
    LONG cx;
    LONG cy;
} SIZE;
typedef struct tagMSG {
    HWND hwnd;
    UINT message;
    WPARAM wParam;
    LPARAM lParam;
    DWORD time;
    POINT pt;
} MSG;
typedef MSG *LPMSG;
typedef INT_PTR(CALLBACK *DLGPROC)(HWND, UINT, WPARAM, LPARAM);
typedef struct {
    DWORD style;
    DWORD dwExtendedStyle;
    WORD cdit;
    short x, y, cx, cy;
} DLGTEMPLATE, *LPDLGTEMPLATE;
typedef const DLGTEMPLATE *LPCDLGTEMPLATEA;
typedef struct tagPAINTSTRUCT {
    HDC hdc;
    BOOL fErase;
    RECT rcPaint;
    BOOL fRestore;
    BOOL fIncUpdate;
    BYTE rgbReserved[32];
} PAINTSTRUCT;
/* A scroll bar's whole state. The thumb's size comes from nPage against the
 * range, which is why a bar cannot be driven by position alone. */
typedef struct tagSCROLLINFO {
    UINT cbSize;
    UINT fMask;
    int nMin;
    int nMax;
    UINT nPage;
    int nPos;
    int nTrackPos;
} SCROLLINFO, *LPSCROLLINFO;
/* Set or read what a scroll bar shows. `bar` is SB_CTL for a SCROLLBAR
 * control, which is the one ween32 has. Returns the position it settled on. */
int SetScrollInfo(HWND wnd, int bar, const SCROLLINFO *si, BOOL redraw);
BOOL GetScrollInfo(HWND wnd, int bar, SCROLLINFO *si);
int SetScrollPos(HWND wnd, int bar, int pos, BOOL redraw);
int GetScrollPos(HWND wnd, int bar);
BOOL SetScrollRange(HWND wnd, int bar, int min, int max, BOOL redraw);
BOOL GetScrollRange(HWND wnd, int bar, int *min, int *max);
BOOL ShowScrollBar(HWND wnd, int bar, BOOL show);
BOOL EnableScrollBar(HWND wnd, UINT bar, UINT flags);
typedef struct ween_gdiobj *HPEN;
typedef struct tagRGBQUAD {
    BYTE rgbBlue;
    BYTE rgbGreen;
    BYTE rgbRed;
    BYTE rgbReserved;
} RGBQUAD;
typedef struct tagBITMAPINFOHEADER {
    DWORD biSize;
    LONG biWidth;
    LONG biHeight;
    WORD biPlanes;
    WORD biBitCount;
    DWORD biCompression;
    DWORD biSizeImage;
    LONG biXPelsPerMeter;
    LONG biYPelsPerMeter;
    DWORD biClrUsed;
    DWORD biClrImportant;
} BITMAPINFOHEADER, *LPBITMAPINFOHEADER;
typedef struct tagBITMAPINFO {
    BITMAPINFOHEADER bmiHeader;
    RGBQUAD bmiColors[1];
} BITMAPINFO, *LPBITMAPINFO;
/* A device context whose surface is a bitmap rather than a window: this is
 * where an application keeps the picture it is editing. A fresh one has a
 * 1x1 bitmap in it, as GDI's does, so nothing can be drawn until one is
 * selected. */
HDC CreateCompatibleDC(HDC dc);
BOOL DeleteDC(HDC dc);
HBITMAP CreateCompatibleBitmap(HDC dc, int w, int h);
int GetObjectA(HGDIOBJ obj, int size, LPVOID out);
HPEN CreatePen(int style, int width, COLORREF color);
int SetROP2(HDC dc, int mode);
int GetROP2(HDC dc);
COLORREF SetBkColor(HDC dc, COLORREF color);
COLORREF GetBkColor(HDC dc);
int SetStretchBltMode(HDC dc, int mode);
/* Where the caller's (0,0) lands in the window: a scrolling view sets this
 * and then draws in the coordinates of what it is showing. */
BOOL SetViewportOrgEx(HDC dc, int x, int y, POINT *prev);
BOOL GetViewportOrgEx(HDC dc, POINT *pt);
BOOL MoveToEx(HDC dc, int x, int y, POINT *prev);
BOOL LineTo(HDC dc, int x, int y);
BOOL Polyline(HDC dc, const POINT *pts, int count);
BOOL PolyBezier(HDC dc, const POINT *pts, DWORD count);
BOOL Polygon(HDC dc, const POINT *pts, int count);
BOOL Rectangle(HDC dc, int left, int top, int right, int bottom);
BOOL Ellipse(HDC dc, int left, int top, int right, int bottom);
BOOL RoundRect(HDC dc, int left, int top, int right, int bottom, int ew, int eh);
COLORREF SetPixel(HDC dc, int x, int y, COLORREF color);
COLORREF GetPixel(HDC dc, int x, int y);
BOOL ExtFloodFill(HDC dc, int x, int y, COLORREF color, UINT type);
BOOL BitBlt(HDC dst, int x, int y, int w, int h, HDC src, int sx, int sy,
            DWORD rop);
BOOL StretchBlt(HDC dst, int x, int y, int w, int h, HDC src, int sx, int sy,
                int sw, int sh, DWORD rop);
BOOL PatBlt(HDC dc, int x, int y, int w, int h, DWORD rop);
BOOL InvertRect(HDC dc, const RECT *rect);
BOOL DrawFocusRect(HDC dc, const RECT *rect);
/* The pixels of a bitmap, as a device-independent bitmap: how a program that
 * has to write a .bmp file, or work on the picture a pixel at a time, gets
 * at them. 24 and 32 bits per pixel, bottom-up as a DIB is. */
int GetDIBits(HDC dc, HBITMAP bmp, UINT start, UINT lines, LPVOID bits,
              LPBITMAPINFO info, UINT usage);
int SetDIBits(HDC dc, HBITMAP bmp, UINT start, UINT lines, const void *bits,
              const BITMAPINFO *info, UINT usage);
/* ---- the common dialogs ---------------------------------------------------
 *
 * The dialogs that belong to the system rather than to the application: the
 * one that asks for a file name and the one that asks for a colour. Every
 * program gets the same two, which is the point of them — an application
 * calls GetOpenFileNameA and takes what comes back in its buffer, and what
 * it looks like is the system's business.
 */

typedef struct tagOFNA {
    DWORD lStructSize;
    HWND hwndOwner;
    HINSTANCE hInstance;
    LPCSTR lpstrFilter;
    LPSTR lpstrCustomFilter;
    DWORD nMaxCustFilter;
    DWORD nFilterIndex;
    LPSTR lpstrFile;
    DWORD nMaxFile;
    LPSTR lpstrFileTitle;
    DWORD nMaxFileTitle;
    LPCSTR lpstrInitialDir;
    LPCSTR lpstrTitle;
    DWORD Flags;
    WORD nFileOffset;
    WORD nFileExtension;
    LPCSTR lpstrDefExt;
    LPARAM lCustData;
    void *lpfnHook;
    LPCSTR lpTemplateName;
} OPENFILENAMEA, *LPOPENFILENAMEA;
BOOL GetOpenFileNameA(OPENFILENAMEA *ofn);
BOOL GetSaveFileNameA(OPENFILENAMEA *ofn);
typedef struct tagCHOOSECOLORA {
    DWORD lStructSize;
    HWND hwndOwner;
    HWND hInstance;
    COLORREF rgbResult;
    COLORREF *lpCustColors;
    DWORD Flags;
    LPARAM lCustData;
    /* The hook an application hands over with CC_ENABLEHOOK: it is offered
     * every message before the dialog sees it. */
    INT_PTR(CALLBACK *lpfnHook)(HWND, UINT, WPARAM, LPARAM);
    LPCSTR lpTemplateName;
} CHOOSECOLORA, *LPCHOOSECOLORA;
/* An application that wants a word in the dialog -- its own title, say --
 * hands over a procedure that is offered every message first. */
#define CC_ENABLEHOOK 0x00000010
BOOL ChooseColorA(CHOOSECOLORA *cc);
/* Registering the common control classes. ween32 has them registered before
 * anything can ask for one, so this says yes and does nothing — but an
 * application must still call it, because on Windows it is what puts the
 * classes there. */
typedef struct {
    DWORD dwSize;
    DWORD dwICC;
} INITCOMMONCONTROLSEX, *LPINITCOMMONCONTROLSEX;
BOOL InitCommonControlsEx(const INITCOMMONCONTROLSEX *icc);
void InitCommonControls(void);
HMENU CreateMenu(void);
HMENU CreatePopupMenu(void);
BOOL DestroyMenu(HMENU menu);
BOOL AppendMenuA(HMENU menu, UINT flags, UINT_PTR id, LPCSTR text);
BOOL SetMenu(HWND wnd, HMENU menu);
HMENU GetMenu(HWND wnd);
HMENU GetSubMenu(HMENU menu, int pos);
int GetMenuItemCount(HMENU menu);
/* A menu whose items change while the program runs: the four files it was
 * last asked to open, say. InsertMenuA puts one ahead of another named by
 * position or by command; DeleteMenu takes one out, and any submenu with
 * it. */
BOOL InsertMenuA(HMENU menu, UINT before, UINT flags, UINT_PTR id, LPCSTR text);
BOOL DeleteMenu(HMENU menu, UINT item, UINT flags);
DWORD CheckMenuItem(HMENU menu, UINT id, UINT check);
/* Which one of a set of items a menu is on: the range is marked as a set and
 * the one named is ticked with a dot rather than a check mark. */
BOOL CheckMenuRadioItem(HMENU menu, UINT first, UINT last, UINT check,
                        UINT flags);
BOOL EnableMenuItem(HMENU menu, UINT id, UINT enable);
/* An item's text, changed after the fact: what a command that names what it
 * would undo needs. */
BOOL ModifyMenuA(HMENU menu, UINT item, UINT flags, UINT_PTR id, LPCSTR text);
BOOL TrackPopupMenu(HMENU menu, UINT flags, int x, int y, int reserved,
                    HWND owner, const RECT *unused);
/* ---- the clipboard -------------------------------------------------------
 *
 * Open it, empty it, put something in, close it. The data belongs to the
 * clipboard once handed over — do not free it — and what GetClipboardData
 * returns stays valid until the next thing replaces it.
 *
 * WM_CUT/WM_COPY/WM_PASTE are what a control acts on; an EDIT also takes
 * Ctrl+X, Ctrl+C, Ctrl+V and Ctrl+A directly. */
typedef void *HANDLE;
BOOL OpenClipboard(HWND owner);
BOOL CloseClipboard(void);
BOOL EmptyClipboard(void);
HANDLE SetClipboardData(UINT format, HANDLE data);
HANDLE GetClipboardData(UINT format);
BOOL IsClipboardFormatAvailable(UINT format);
HBITMAP CreateBitmap(int w, int h, UINT planes, UINT bpp, const void *bits);
HIMAGELIST ImageList_Create(int cx, int cy, UINT flags, int initial, int grow);
BOOL ImageList_Destroy(HIMAGELIST il);
int ImageList_Add(HIMAGELIST il, HBITMAP image, HBITMAP mask);
int ImageList_AddMasked(HIMAGELIST il, HBITMAP image, COLORREF transparent);
BOOL ImageList_Draw(HIMAGELIST il, int index, HDC dc, int x, int y, UINT style);
/* An icon carries its own transparency mask, which is what makes it an icon
 * and not a bitmap. LoadImageA reads one from a .ico file with IMAGE_ICON. */
/* An icon from two bitmaps, win32's oldest way of making one: the AND mask
 * says what shows through and the XOR bits are the colours. */
HICON CreateIcon(HINSTANCE inst, int w, int h, BYTE planes, BYTE bpp,
                 const BYTE *and_bits, const BYTE *xor_bits);
void DestroyIcon(HICON icon);
BOOL DrawIconEx(HDC dc, int x, int y, HICON icon, int cx, int cy, UINT frame,
                HBRUSH flicker, UINT flags);
typedef struct {
    BYTE fVirt;
    WORD key;
    WORD cmd;
} ACCEL, *LPACCEL;
struct ween_accel;
typedef struct ween_accel *HACCEL;
HACCEL CreateAcceleratorTableA(LPACCEL entries, int count);
BOOL DestroyAcceleratorTable(HACCEL table);
int TranslateAcceleratorA(HWND wnd, HACCEL table, LPMSG msg);
/* Dialog layout: base units derived from the dialog font, and the DLU->pixel
 * mapping (px = MulDiv(dlu, base, 4 or 8)) — exactly MapDialogRect. */
LONG GetDialogBaseUnits(void);
BOOL MapDialogRect(HWND dlg, LPRECT rect);
int MulDiv(int number, int numerator, int denominator);
/* The dialog manager: create a dialog from a template (the manager instantiates
 * every control and maps its DLUs to pixels), run the DLGPROC, and route
 * keyboard navigation. This is how win32 dialogs were built. */
HWND CreateDialogIndirectParamA(HINSTANCE inst, LPCDLGTEMPLATEA tmpl,
                                HWND parent, DLGPROC proc, LPARAM init_param);
BOOL IsDialogMessageA(HWND dlg, LPMSG msg);
LRESULT DefDlgProcA(HWND dlg, UINT msg, WPARAM wp, LPARAM lp);
BOOL EndDialog(HWND dlg, INT_PTR result);
/* Modal: does not return until EndDialog is called, and the owner cannot be
 * used in the meantime. */
INT_PTR DialogBoxIndirectParamA(HINSTANCE inst, LPCDLGTEMPLATEA tmpl,
                                HWND owner, DLGPROC proc, LPARAM param);
/* ---- GDI ------------------------------------------------------------------ */

HDC BeginPaint(HWND wnd, PAINTSTRUCT *ps);
/* A context for a window outside a paint, which is what measuring text before
 * laying anything out needs. */
HDC GetDC(HWND wnd);
int ReleaseDC(HWND wnd, HDC dc);
BOOL EndPaint(HWND wnd, const PAINTSTRUCT *ps);
BOOL FillRect(HDC dc, const RECT *rect, HBRUSH brush);
int FrameRect(HDC dc, const RECT *rect, HBRUSH brush);
BOOL DrawEdge(HDC dc, LPRECT rect, UINT edge, UINT flags);
BOOL DrawFrameControl(HDC dc, LPRECT rect, UINT type, UINT state);
BOOL TextOutA(HDC dc, int x, int y, LPCSTR text, int len);
int DrawTextA(HDC dc, LPCSTR text, int len, LPRECT rect, UINT format);
BOOL GetTextExtentPoint32A(HDC dc, LPCSTR text, int len, SIZE *size);
COLORREF SetTextColor(HDC dc, COLORREF color);
int SetBkMode(HDC dc, int mode);
DWORD GetSysColor(int index);
HBRUSH GetSysColorBrush(int index);
HBRUSH CreateSolidBrush(COLORREF color);
HFONT CreateFontA(int height, int width, int escapement, int orientation,
                  int weight, DWORD italic, DWORD underline, DWORD strike_out,
                  DWORD charset, DWORD out_precision, DWORD clip_precision,
                  DWORD quality, DWORD pitch_and_family, LPCSTR face_name);
BOOL DeleteObject(HGDIOBJ obj);
HGDIOBJ GetStockObject(int what);
HGDIOBJ SelectObject(HDC dc, HGDIOBJ obj);