zig/ween32.zig


pub extern fn CreateMenu() HMENU;
pub extern fn CreatePopupMenu() HMENU;
pub extern fn DestroyMenu(menu: HMENU) BOOL;
pub extern fn AppendMenuA(menu: HMENU, flags: UINT, id: UINT_PTR, text: ?LPCSTR) BOOL;
pub extern fn SetMenu(wnd: HWND, menu: HMENU) BOOL;
pub extern fn GetMenu(wnd: HWND) HMENU;
pub extern fn GetSubMenu(menu: HMENU, pos: c_int) HMENU;
pub extern fn GetMenuItemCount(menu: HMENU) c_int;
pub extern fn InsertMenuA(menu: HMENU, before: UINT, flags: UINT, id: usize, text: ?LPCSTR) BOOL;
pub extern fn DeleteMenu(menu: HMENU, item: UINT, flags: UINT) BOOL;
pub extern fn CheckMenuItem(menu: HMENU, id: UINT, check: UINT) DWORD;
pub extern fn CheckMenuRadioItem(menu: HMENU, first: UINT, last: UINT, check: UINT, flags: UINT) BOOL;
pub extern fn EnableMenuItem(menu: HMENU, id: UINT, enable: UINT) BOOL;
pub extern fn ModifyMenuA(menu: HMENU, item: UINT, flags: UINT, id: UINT_PTR, text: ?LPCSTR) BOOL;
pub extern fn TrackPopupMenu(menu: HMENU, flags: UINT, x: c_int, y: c_int, reserved: c_int, owner: HWND, rect: ?*const RECT) BOOL;

// ---- USER32: accelerators, clipboard, dialogs ----------------------------

pub extern fn CreateAcceleratorTableA(accels: [*]const ACCEL, count: c_int) HACCEL;
pub extern fn DestroyAcceleratorTable(table: HACCEL) BOOL;
pub extern fn TranslateAcceleratorA(wnd: HWND, table: HACCEL, msg: *MSG) c_int;

pub extern fn OpenClipboard(owner: ?HWND) BOOL;
pub extern fn CloseClipboard() BOOL;
pub extern fn EmptyClipboard() BOOL;
pub extern fn SetClipboardData(format: UINT, data: HANDLE) HANDLE;
pub extern fn GetClipboardData(format: UINT) HANDLE;
pub extern fn IsClipboardFormatAvailable(format: UINT) BOOL;

pub extern fn GetDialogBaseUnits() LONG;
pub extern fn MapDialogRect(dlg: ?HWND, rect: *RECT) BOOL;
pub extern fn MulDiv(number: c_int, numerator: c_int, denominator: c_int) c_int;
pub extern fn IsDialogMessageA(dlg: HWND, msg: *MSG) BOOL;
pub extern fn DefDlgProcA(dlg: HWND, msg: UINT, wp: WPARAM, lp: LPARAM) LRESULT;
pub extern fn EndDialog(dlg: HWND, result: INT_PTR) BOOL;
pub extern fn CreateDialogIndirectParamA(inst: HINSTANCE, tmpl: *const DLGTEMPLATE, parent: ?HWND, proc: DLGPROC, param: LPARAM) ?HWND;
pub extern fn DialogBoxIndirectParamA(inst: HINSTANCE, tmpl: *const DLGTEMPLATE, owner: ?HWND, proc: DLGPROC, param: LPARAM) INT_PTR;

// ---- USER32: a window's own scroll bars ---------------------------------

pub extern fn SetScrollInfo(wnd: HWND, bar: c_int, info: *const SCROLLINFO, redraw: BOOL) c_int;
pub extern fn GetScrollInfo(wnd: HWND, bar: c_int, info: *SCROLLINFO) BOOL;
pub extern fn SetScrollPos(wnd: HWND, bar: c_int, pos: c_int, redraw: BOOL) c_int;
pub extern fn GetScrollPos(wnd: HWND, bar: c_int) c_int;
pub extern fn SetScrollRange(wnd: HWND, bar: c_int, min: c_int, max: c_int, redraw: BOOL) BOOL;
pub extern fn GetScrollRange(wnd: HWND, bar: c_int, min: *c_int, max: *c_int) BOOL;
pub extern fn ShowScrollBar(wnd: HWND, bar: c_int, show: BOOL) BOOL;
pub extern fn EnableScrollBar(wnd: HWND, bar: UINT, flags: UINT) BOOL;

// ---- COMDLG32 ------------------------------------------------------------

pub const OPENFILENAMEA = extern struct {
    lStructSize: DWORD = @sizeOf(OPENFILENAMEA),
    hwndOwner: ?HWND = null,
    hInstance: HINSTANCE = null,
    lpstrFilter: ?LPCSTR = null,
    lpstrCustomFilter: ?LPSTR = null,
    nMaxCustFilter: DWORD = 0,
    nFilterIndex: DWORD = 1,
    lpstrFile: LPSTR,
    nMaxFile: DWORD,
    lpstrFileTitle: ?LPSTR = null,
    nMaxFileTitle: DWORD = 0,
    lpstrInitialDir: ?LPCSTR = null,
    lpstrTitle: ?LPCSTR = null,
    Flags: DWORD = 0,
    nFileOffset: WORD = 0,
    nFileExtension: WORD = 0,
    lpstrDefExt: ?LPCSTR = null,
    lCustData: LPARAM = 0,
    /// Offered every message before the dialog sees it, when the flags say
    /// CC_ENABLEHOOK: what an application gives the system's colour box a
    /// title of its own with.
    lpfnHook: ?*const fn (HWND, UINT, WPARAM, LPARAM) callconv(.c) INT_PTR = null,
    lpTemplateName: ?LPCSTR = null,
};

pub const CHOOSECOLORA = extern struct {
    lStructSize: DWORD = @sizeOf(CHOOSECOLORA),
    hwndOwner: ?HWND = null,
    hInstance: ?HWND = null,
    rgbResult: COLORREF = 0,
    lpCustColors: [*]COLORREF,
    Flags: DWORD = 0,
    lCustData: LPARAM = 0,
    /// Offered every message before the dialog sees it, when the flags say
    /// CC_ENABLEHOOK: what an application gives the system's colour box a
    /// title of its own with.
    lpfnHook: ?*const fn (HWND, UINT, WPARAM, LPARAM) callconv(.c) INT_PTR = null,
    lpTemplateName: ?LPCSTR = null,
};

pub extern fn GetOpenFileNameA(ofn: *OPENFILENAMEA) BOOL;
pub extern fn GetSaveFileNameA(ofn: *OPENFILENAMEA) BOOL;
pub extern fn ChooseColorA(cc: *CHOOSECOLORA) BOOL;

// ---- COMCTL32 ------------------------------------------------------------

pub extern fn InitCommonControlsEx(icc: *const INITCOMMONCONTROLSEX) BOOL;
pub extern fn InitCommonControls() void;
pub extern fn ImageList_Create(cx: c_int, cy: c_int, flags: UINT, initial: c_int, grow: c_int) HIMAGELIST;
pub extern fn ImageList_Destroy(il: HIMAGELIST) BOOL;
pub extern fn ImageList_Add(il: HIMAGELIST, image: HBITMAP, mask: ?HBITMAP) c_int;
pub extern fn ImageList_AddMasked(il: HIMAGELIST, image: HBITMAP, transparent: COLORREF) c_int;
pub extern fn ImageList_Draw(il: HIMAGELIST, index: c_int, dc: HDC, x: c_int, y: c_int, style: UINT) BOOL;

// ---- GDI: contexts, objects and text ------------------------------------

pub extern fn BeginPaint(wnd: HWND, ps: *PAINTSTRUCT) ?HDC;
pub extern fn EndPaint(wnd: HWND, ps: *const PAINTSTRUCT) BOOL;
pub extern fn GetDC(wnd: ?HWND) ?HDC;
pub extern fn ReleaseDC(wnd: ?HWND, dc: HDC) c_int;
pub extern fn FillRect(dc: HDC, rect: *const RECT, brush: HBRUSH) BOOL;
pub extern fn FrameRect(dc: HDC, rect: *const RECT, brush: HBRUSH) c_int;
pub extern fn DrawEdge(dc: HDC, rect: *RECT, edge: UINT, flags: UINT) BOOL;
pub extern fn DrawFrameControl(dc: HDC, rect: *RECT, kind: UINT, state: UINT) BOOL;
pub extern fn TextOutA(dc: HDC, x: c_int, y: c_int, text: [*]const u8, len: c_int) BOOL;
pub extern fn DrawTextA(dc: HDC, text: [*]const u8, len: c_int, rect: *RECT, format: UINT) c_int;
pub extern fn GetTextExtentPoint32A(dc: HDC, text: [*]const u8, len: c_int, size: *SIZE) BOOL;
pub extern fn SetTextColor(dc: HDC, color: COLORREF) COLORREF;
pub extern fn SetBkMode(dc: HDC, mode: c_int) c_int;
pub extern fn SetBkColor(dc: HDC, color: COLORREF) COLORREF;
pub extern fn GetBkColor(dc: HDC) COLORREF;
pub extern fn GetSysColor(index: c_int) DWORD;
pub extern fn GetSysColorBrush(index: c_int) ?HBRUSH;
pub extern fn CreateSolidBrush(color: COLORREF) ?HBRUSH;
pub extern fn CreateFontA(height: c_int, width: c_int, escapement: c_int, orientation: c_int, weight: c_int, italic: DWORD, underline: DWORD, strike_out: DWORD, charset: DWORD, out_precision: DWORD, clip_precision: DWORD, quality: DWORD, pitch_and_family: DWORD, face_name: LPCSTR) ?HFONT;
pub extern fn DeleteObject(obj: HGDIOBJ) BOOL;
pub extern fn GetStockObject(what: c_int) ?HGDIOBJ;
pub extern fn SelectObject(dc: HDC, obj: HGDIOBJ) ?HGDIOBJ;
pub extern fn CreateBitmap(w: c_int, h: c_int, planes: UINT, bpp: UINT, bits: ?*const anyopaque) ?HBITMAP;
pub extern fn CreateIcon(inst: HINSTANCE, w_: c_int, h_: c_int, planes: BYTE, bpp: BYTE, and_bits: [*]const BYTE, xor_bits: [*]const BYTE) HICON;
pub extern fn DestroyIcon(icon: HICON) void;
pub extern fn DrawIconEx(dc: HDC, x: c_int, y: c_int, icon: HICON, cx: c_int, cy: c_int, frame: UINT, flicker: ?HBRUSH, flags: UINT) BOOL;

// ---- GDI: the drawing half ----------------------------------------------

pub extern fn CreateCompatibleDC(dc: ?HDC) ?HDC;
pub extern fn DeleteDC(dc: HDC) BOOL;
pub extern fn CreateCompatibleBitmap(dc: HDC, w: c_int, h: c_int) ?HBITMAP;
pub extern fn GetObjectA(obj: HGDIOBJ, size: c_int, out: ?*anyopaque) c_int;
pub extern fn CreatePen(style: c_int, width: c_int, color: COLORREF) ?HPEN;
pub extern fn SetROP2(dc: HDC, mode: c_int) c_int;
pub extern fn GetROP2(dc: HDC) c_int;
pub extern fn SetStretchBltMode(dc: HDC, mode: c_int) c_int;
pub extern fn SetViewportOrgEx(dc: HDC, x: c_int, y: c_int, prev: ?*POINT) BOOL;
pub extern fn GetViewportOrgEx(dc: HDC, pt: *POINT) BOOL;
pub extern fn MoveToEx(dc: HDC, x: c_int, y: c_int, prev: ?*POINT) BOOL;
pub extern fn LineTo(dc: HDC, x: c_int, y: c_int) BOOL;
pub extern fn Polyline(dc: HDC, pts: [*]const POINT, count: c_int) BOOL;
pub extern fn PolyBezier(dc: HDC, pts: [*]const POINT, count: DWORD) BOOL;
pub extern fn Polygon(dc: HDC, pts: [*]const POINT, count: c_int) BOOL;
pub extern fn Rectangle(dc: HDC, left: c_int, top: c_int, right: c_int, bottom: c_int) BOOL;
pub extern fn Ellipse(dc: HDC, left: c_int, top: c_int, right: c_int, bottom: c_int) BOOL;
pub extern fn RoundRect(dc: HDC, left: c_int, top: c_int, right: c_int, bottom: c_int, ew: c_int, eh: c_int) BOOL;
pub extern fn SetPixel(dc: HDC, x: c_int, y: c_int, color: COLORREF) COLORREF;
pub extern fn GetPixel(dc: HDC, x: c_int, y: c_int) COLORREF;
pub extern fn ExtFloodFill(dc: HDC, x: c_int, y: c_int, color: COLORREF, kind: UINT) BOOL;
pub extern fn BitBlt(dst: HDC, x: c_int, y: c_int, w: c_int, h: c_int, src: ?HDC, sx: c_int, sy: c_int, rop: DWORD) BOOL;
pub extern fn StretchBlt(dst: HDC, x: c_int, y: c_int, w: c_int, h: c_int, src: ?HDC, sx: c_int, sy: c_int, sw: c_int, sh: c_int, rop: DWORD) BOOL;
pub extern fn PatBlt(dc: HDC, x: c_int, y: c_int, w: c_int, h: c_int, rop: DWORD) BOOL;
pub extern fn InvertRect(dc: HDC, rect: *const RECT) BOOL;
pub extern fn DrawFocusRect(dc: HDC, rect: *const RECT) BOOL;
pub extern fn GetDIBits(dc: ?HDC, bmp: HBITMAP, start: UINT, lines: UINT, bits: ?*anyopaque, info: *BITMAPINFO, usage: UINT) c_int;
pub extern fn SetDIBits(dc: ?HDC, bmp: HBITMAP, start: UINT, lines: UINT, bits: *const anyopaque, info: *const BITMAPINFO, usage: UINT) c_int;

// ---- constants (generated: see the note at the top) ----------------------
// >>> genconsts
// Generated by tools/zigbind/genconsts.py from include/ween32.h.
// Every value comes from the C header, which `make win32` checks
// against the real Windows SDK -- so these agree with Windows too.
